testdata/rules-tests/bad/AG-021-v2-rust-unimplemented-crypto.rs
fn decrypt_payload(ciphertext: &[u8]) -> Result<Vec<u8>, CryptoError> {
    unimplemented!()
}
